--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <script src="app.js" type="text/javascript" ></script>
 </head>
 <body>
+
+    <button id="btn-translate">Translate</button>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     
+    <script src="app.js" type="text/javascript" ></script>
 </body>
 </html>
