--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="app.js" type="text/javascript" ></script>
 </head>
 <body>
+    <h1>Talk Banana</h1>
+    <textarea class="textarea" placeholder="Enter the sentence in English to get converted to banana"></textarea>
 
     <button id="btn-translate">Translate</button>
 
