--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <h1>Talk Banana</h1>
-    <textarea class="textarea" placeholder="Enter the sentence in English to get converted to banana"></textarea>
+    <textarea id="txt-input"
+    class="textarea" placeholder="Enter the sentence in English to get converted to banana"></textarea>
 
     <button id="btn-translate">Translate</button>
 
