--- a/index.html
+++ b/index.html
@@ -15,25 +15,8 @@
     <button id="btn-translate">Translate</button>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
+    <div style="font-size: larger;">Output Will come here 👇</div>
+    <div id="output"></div>
     <script src="app.js" type="text/javascript" ></script>
 </body>
 </html>
