--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <script src="app.js" type="text/javascript" ></script>
 </head>
 <body>
-    <h1 >Talk Banana</h1>
+    <div class="header">
+        <h1 >Talk Banana</h1>
+
+    </div>
     <textarea id="txt-input"
     class="textarea" placeholder="Enter the sentence in English to get converted to banana"></textarea>
 
