--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banana-speak</title>
-    <link rel="stylesheet" href="/styles.css">
-    <script src="app.js" type="text/javascript" ></script>
-</head>
-<body>
-    <div class="header">
-        <h1 >Talk Banana</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Talk in Minion's  Language</title>
+    <link rel="stylesheet" href="/styles.css" />
+  </head>
+  <body>
+    <h1>
+      Lets Talk Minions 🍌🍌🍌
+    </h1>
 
-    </div>
-    <textarea id="txt-input"
-    class="textarea" placeholder="Enter the sentence in English to get converted to banana"></textarea>
+    <textarea
+      placeholder="Type Your Text In English Here To Translate It Into Minion's Banana Language"
+      id="input"
+      cols="30"
+      rows="10"
+    ></textarea>
 
-    <button id="btn-translate">Translate</button>
+    <button id="translate-btn">Translate</button>
 
+    <div class="font-output">Your Output Will Come Below 👇</div>
 
-    <div style="font-size: larger;">Output Will come here 👇</div>
     <div id="output"></div>
-    <script src="app.js" type="text/javascript" ></script>
-</body>
+
+    <footer>
+        <h2>Developed with the help of Funtranslations</h2>
+    </footer>
+
+    <script src="/app.js" type="text/javascript"></script>
+   
+  </body>
 </html>
